[kcms/formats] Write text codec into localerc files

In the port this snippet got lost. Without the suffix we lose information needed by clients.

This patch will also affect the names presented as a subtitle in the list.
If that is undesired we can introduce a new role.

BUG: 447903